--- a/src/pages/History/styles.module.css
+++ b/src/pages/History/styles.module.css
@@ -37,3 +37,13 @@
     text-align: left;
     border-bottom: 1px solid var(--gray-700);
 }
+
+
+.thSort {
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+  }
+  
+  .thSort:hover {
+    filter: brightness(80%);
+  }
